--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,5 +1,5 @@
-transformers==4.40.1
-datasets==2.19.1
+transformers>=4.40.1
+datasets>=2.19.1
 peft==0.10.0
 accelerate==0.30.1
 bitsandbytes==0.43.1
@@ -7,3 +7,4 @@ trl==0.7.11
 torch>=2.1
 scipy
 huggingface_hub>=0.21.4
+
